--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,8 @@
   },
   "extends": [
     "airbnb-base",
-    "prettier"
+    "plugin:@typescript-eslint/recommended",
+    "plugin:prettier/recommended"
   ],
   "globals": {
     "Atomics": "readonly",
@@ -35,8 +36,14 @@
     "class-methods-use-this": 0,
     "no-param-reassign": 0,
     "no-underscore-dangle": 0,
-    "@typescript-eslint/no-empty-function": ["error", { "allow": ["arrowFunctions"] }],
+    "no-empty-function": 0,
     "@typescript-eslint/no-non-null-assertion": 0,
-    "no-bitwise": 0
+    "no-bitwise": 0,
+    "no-useless-constructor": 0,
+    "@typescript-eslint/interface-name-prefix": "off",
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/no-explicit-any": "off",
+    "import/prefer-default-export": 0
   }
 }
