--- a/package.json
+++ b/package.json
@@ -71,13 +71,12 @@
       "json",
       "ts"
     ],
-    "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
     "collectCoverageFrom": [
-      "**/*.(t|j)s"
+      "./src/**/*.ts"
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node",
