--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 DB_TYPE=postgres
 DB_HOST=ip
-DB_PORT=port
+DB_PORT=5432
 DB_DATABASE=dbname
 DB_USERNAME=user
 DB_PASSWORD=pwd
+REDIS_HOST=ip
+REDIS_PORT=6379
