--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
   },
-  "include": ["src/**/*", "global.d.ts", "migrations/**/*"]
+  "include": ["src/**/*", "global.d.ts", "test/**/*"]
 }
