--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "express": "^4.18.2",
     "ioredis": "^5.3.2",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
@@ -80,7 +83,7 @@
     "collectCoverageFrom": [
       "./src/**/*.ts"
     ],
-    "coverageDirectory": "../coverage",
+    "coverageDirectory": "./coverage",
     "testEnvironment": "node",
     "setupFilesAfterEnv": [
       "jest-extended/all"
