--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,7 @@
-DB_TYPE=postgres
-DB_HOST=ip
-DB_PORT=5432
-DB_DATABASE=dbname
-DB_USERNAME=user
-DB_PASSWORD=pwd
+POSTGRES_HOST=ip
+POSTGRES_PORT=5432
+POSTGRES_DATABASE=POSTGRESname
+POSTGRES_USERNAME=user
+POSTGRES_PASSWORD=pwd
 REDIS_HOST=ip
 REDIS_PORT=6379
