--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wemo-homework",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "A simple scooter rental API.",
   "author": "HARCHHI",
   "license": "UNLICENSED",
@@ -18,7 +18,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "migrate:schema": "typeorm-ts-node-commonjs schema:sync -d ./migrations/datasource.ts"
+    "migration:schema": "typeorm-ts-node-commonjs schema:sync -d ./migrations/datasource.ts"
   },
   "repository": {
     "type": "git",
